syntax = "proto3";

package workflows;

import "provision/provision.proto";
import "stroppy/test.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/workflows";

/*
    Standalone tasks used in edge worker
*/
message Tasks {
    /*
        Setup database instance on edge worker
    */
    message SetupServices {
        message Input {
            stroppy.TestRunContext context = 1 [(validate.rules).message.required = true];
            repeated provision.Service services = 2 [(validate.rules).repeated.min_items = 1];
        }
        message Output {}
    }
    /*
        Install stroppy cli on edge worker
    */
    message InstallStroppy {
        message Input {
            stroppy.TestRunContext context = 1 [(validate.rules).message.required = true];
            stroppy.StroppyCli stroppy_cli = 2 [(validate.rules).message.required = true];
        }
        message Output {}
    }
    /*
        Run stroppy test on edge worker
    */
    message RunStroppy {
        message Input {
            stroppy.TestRunContext context = 1 [(validate.rules).message.required = true];
            stroppy.StroppyCli stroppy_cli_call = 2 [(validate.rules).message.required = true];
        }
        message Output {
            stroppy.TestResult result = 1 [(validate.rules).message.required = true];
        }
    }
}